--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "test": "npm run build && node --test ./test/*.spec.js",
+    "test": "npm run build && node --test ./test/rpc.spec.js",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
     "viem": "^2.26.2"
-  },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  }
 }
