wip: replace iterator with readable streams on rpc data source

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "test": "npm run build && node --test ./test/aggregator.spec.js",
+    "test": "npm run build && node --test ./test/rpc.spec.js",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
