--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "@railgun-reloaded/subsquid-client": "github:railgun-reloaded/subsquid-client#fix/nested-query-entities",
+    "@railgun-reloaded/subsquid-client": "github:railgun-reloaded/subsquid-client#master",
     "viem": "^2.26.2"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
