--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "chain-sync",
   "version": "0.0.1",
   "description": "simple chain sync",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "index.js"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
